--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Helvetica Neue",Arial,sans-serif;
 }
 
 // Index page
@@ -39,10 +40,10 @@ body {
   }
 }
 
-// Admin page
+// Equipment page
 
 .admin-container {
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
   width: 100vw;
   max-width:100%;
 }
