--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -12,6 +12,9 @@ $white-text-color: #fff;
 $dark-text-color: #000;
 $gray-text-color: #757075;
 
+$background-color: #E5F5F7;
+$shadow-color: #7FCCD9;
+
 // layout
 $navbar-height: 3rem;
 $sidebar-width: 20rem;
